# article-xas-xncd

./: .gitignore  README.md  pyproject.toml  setup.py
data/: paths.json  spettro-b3lyp-perfluoro  spettro-cam-h2o  spettro-cam-perfluoro  spettro-h2o-b3lyp
data/spettri-singoli/PMM-CARBON-K-C6F14/: ecd-0-1-core  ecd-0-10-core  ecd-0-11-core  ecd-0-12-core  ecd-0-13-core  ecd-0-14-core  ecd-0-15-core  ecd-0-16-core  ecd-0-17-core  ecd-0-18-core  ecd-0-19-core  ecd-0-2-core  ecd-0-20-core  ecd-0-21-core  ecd-0-22-core  ecd-0-23-core  ecd-0-24-core  ecd-0-25-core  ecd-0-26-core  ecd-0-27-core  ecd-0-28-core  ecd-0-29-core  ecd-0-3-core  ecd-0-30-core  ecd-0-31-core  ecd-0-32-core  ecd-0-33-core  ecd-0-34-core  ecd-0-35-core  ecd-0-36-core  ecd-0-37-core  (+9 more)
data/spettri-singoli/PMM-CARBON-K-C6F14-B3LYP/: ecd-0-1-core  ecd-0-10-core  ecd-0-11-core  ecd-0-12-core  ecd-0-13-core  ecd-0-14-core  ecd-0-15-core  ecd-0-16-core  ecd-0-17-core  ecd-0-19-core  ecd-0-2-core  ecd-0-20-core  ecd-0-21-core  ecd-0-22-core  ecd-0-23-core  ecd-0-24-core  ecd-0-25-core  ecd-0-26-core  ecd-0-27-core  ecd-0-28-core  ecd-0-29-core  ecd-0-3-core  ecd-0-30-core  ecd-0-31-core  ecd-0-32-core  ecd-0-33-core  ecd-0-34-core  ecd-0-35-core  ecd-0-36-core  ecd-0-37-core  ecd-0-38-core  ecd-0-39-core  ecd-0-4-core  ecd-0-40-core  ecd-0-5-core  ecd-0-6-core  ecd-0-7-core  ecd-0-8-core  ecd-0-9-core
notebooks/: GS_Carbon_CORE_CAMB3LYP_METHOX_Geometry1_Coriani_Solvents.ipynb  generate_spectra.ipynb  plots.ipynb
scripts/: run_pipeline.sh
src/article_xas_xncd/: __init__.py  class_spectrum.py  main.py
(+80 files in other folders)
